--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -85,7 +85,7 @@ admin_39 : "❖ ʀєϻσᴠєᴅ 1 υᴘᴠσᴛє."
 admin_40 : "❖ υᴘᴠσᴛєᴅ."
 
 start_1 : "❖ {0} /n ⌾ ɪs ᴧʟɪᴠє .\n\n<b>⌾ υᴘᴛɪϻє :</b> {1}"
-start_2 : "**┌────── ˹ ɪɴғᴏʀᴍᴀᴛɪᴏɴ ˼─── ⏤‌‌●**\n**┆◍ ʜєʏ :- {0} **\n**┆◍ ɪ ᴧϻ :- {1} **\n**└──────────────────────•**\n **✦ ϻυsɪᴄ ʙσᴛ ғᴏʀ ᴛєʟєɢʀᴧϻ ɢʀᴏᴜᴘs.**\n **✦ ησ ʟᴧɢ ησ ᴧᴅs ησ ᴘʀσϻσ.**\n **✦ 24x7 ʀυη ʙєsᴛ sσυηᴅ ǫυᴧʟɪᴛʏ.**\n **✦ єηᴊσʏ ʟᴧɢ ϝʀєє ᴍᴜsɪᴄ ᴡɪᴛʜ sσηᴧʟɪ.**\n **✦ ᴛᴧᴘ ᴛᴏ ʜєʟᴘ ᴧηᴅ ᴄʜєᴧᴋ ϻʏ ᴄσϻϻᴧηᴅs**\n\n**┌────────────────────────•**\n**┆◍ ᴘᴏᴡєʀєᴅ ʙʏ  :-  [ʙᴀᴅɴᴀᴍ](https://t.me/lll_BADNAM_BABY_lll) **❤️‍🔥\n**└────────────────────────•**"
+start_2 : "**┌────── ˹ ɪɴғᴏʀᴍᴀᴛɪᴏɴ ˼─── ⏤‌‌●**\n**┆◍ ʜєʏ :- {0} **\n**┆◍ ɪ ᴧϻ :- {1} **\n**└──────────────────────•**\n **✦ ϻυsɪᴄ ʙσᴛ ғᴏʀ ᴛєʟєɢʀᴧϻ ɢʀᴏᴜᴘs.**\n **✦ ησ ʟᴧɢ ησ ᴧᴅs ησ ᴘʀσϻσ.**\n **✦ 24x7 ʀυη ʙєsᴛ sσυηᴅ ǫυᴧʟɪᴛʏ.**\n **✦ єηᴊσʏ ʟᴧɢ ϝʀєє ᴍᴜsɪᴄ ᴡɪᴛʜ ᴧᴧʀᴜᴍɪ.**\n **✦ ᴛᴧᴘ ᴛᴏ ʜєʟᴘ ᴧηᴅ ᴄʜєᴧᴋ ϻʏ ᴄσϻϻᴧηᴅs**\n\n**┌────────────────────────•**\n**┆◍ ᴘᴏᴡєʀєᴅ ʙʏ  :-  [˹ᴧᴧʀᴜᴍɪ ꭙ ʙᴏᴛѕ˼ 💞](https://t.me/AarumiBots) **❤️‍🔥\n**└────────────────────────•**"
 start_3 : "❖ ʜєʏ {0},\nᴛʜɪs ɪs {1}\n\nᴛʜᴧηᴋs ғσʀ ᴧᴅᴅɪηɢ ϻє ɪη {2}, {3} ᴄᴧη ησᴡ ᴩʟᴧʏ sσηɢs ɪη ᴛʜɪs ᴄʜᴧᴛ."
 start_4 : "侖 <b>sυᴘєʀɢʀσυᴘ ηєєᴅєᴅ</b> 侖\n\nᴘʟєᴧsє ᴄσηᴠєʀᴛ ʏσυʀ <b>ɢʀσυᴘ</b> ᴛσ <b>sυᴘєʀɢʀσυᴘ</b> ᴧηᴅ ᴛʜєη ᴧᴅᴅ ϻє ᴧɢᴧɪη.\n\n<b>ʜσᴡ ᴛσ ϻᴧᴋє sυᴘєʀɢʀσυᴘ ?</b>\n- ϻᴧᴋє ʏσυʀ ɢʀσυᴘ's ᴄʜᴧᴛ ʜɪsᴛσʀʏ <b>ᴠɪsɪʙʟє</b> σηᴄє."
 start_5 : "❖ <b>↝ ʙʟᴧᴄᴋʟɪsᴛєᴅ ᴄʜᴧᴛ ↜</b>\n\nᴛʜɪs ᴄʜᴧᴛ ɪs ʙʟᴧᴄᴋʟɪsᴛєᴅ ση {0} ᴅᴧᴛᴧʙᴧsє.\nʀєǫυєsᴛ ᴧ <a href={1}>sυᴅσ υsєʀ</a> ᴛσ υηʙʟᴧᴄᴋʟɪsᴛ ʏσυʀ ᴄʜᴧᴛ σʀ ᴠɪsɪᴛ <a href={2}>sυᴘᴘσʀᴛ ᴄʜᴧᴛ.</a>"
@@ -187,7 +187,7 @@ S_B_1 : "⌯ ʌᴅᴅ ϻє ⌯"
 S_B_2 : "˹ sυᴘᴘσʀᴛ ˼"
 S_B_3 : "✙ ʌᴅᴅ ϻє ɪη ʏσυʀ ɢʀσυᴘ ✙"
 S_B_4 : "˹ ʜєʟᴘ ᴧηᴅ ᴄσϻϻᴧηᴅ | ᴍσʀє ɪηғσ ˼"
-S_B_5 : " ʙᴀᴅɴᴀᴍ"
+S_B_5 : "⌯ ᴏᴡɴᴇʀ ⌯"
 S_B_6 : "˹ υᴘᴅᴧᴛєs ˼"
 S_B_7 : "˹ ʀєᴘσ ˼"
 S_B_8 : "˹ ʏσυᴛυʙє ˼"
