--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -85,7 +85,7 @@ admin_39 : "❖ ʀєϻσᴠєᴅ 1 υᴘᴠσᴛє."
 admin_40 : "❖ υᴘᴠσᴛєᴅ."
 
 start_1 : "❖ {0} /n ⌾ ɪs ᴧʟɪᴠє .\n\n<b>⌾ υᴘᴛɪᴍᴇ :</b> {1}"
-start_2 : "**┌────── ˹ ɪɴꜰᴏʀᴍᴀᴛɪᴏɴ ˼─── ⏤‌‌●**\n**┆◍ ʜᴇʏ :- {0} **\n**┆◍ ɪ ᴧᴍ :- {1} **\n**└──────────────────────•**\n **✦ ᴍυsɪᴄ ʙᴏᴛ ꜰᴏʀ ᴛᴇʟᴇɢʀᴧᴍ ɢʀᴏᴜᴘs.**\n **✦ ɴʟ ʟᴧɢ ɴᴏ ᴧᴅs ɴᴏ ᴘʀᴏᴍᴏ.**\n **✦ 24x7 ʀυɴ ʙᴇsᴛ sᴏᴜɴᴅ ǫυᴧʟɪᴛʏ.**\n **✦ ᴇɴᴊᴏʏ ʟᴧɢ ꜰʀᴇᴇ ᴍᴜsɪᴄ ᴡɪᴛʜ ᴧᴧʀᴜᴍɪ.**\n **✦ ᴛᴧᴘ ᴛᴏ ʜᴇʟᴘ ᴧɴᴅ ᴄʜᴇᴄᴋ ᴍʏ ᴄᴏᴍᴍᴧɴᴅs**\n\n**┌────────────────────────•**\n**┆◍ ᴘᴏᴡᴇʀᴇᴅ ʙʏ  :-  [˹ᴧᴧʀᴜᴍɪ ꭙ ʙᴏᴛѕ˼ 💞](https://t.me/AarumiBots) **\n**└────────────────────────•**"
+start_2 : "**┌────── ˹ ɪɴꜰᴏʀᴍᴀᴛɪᴏɴ ˼─── ⏤‌‌●**\n**┆◍ ʜᴇʏ :- {0} **\n**┆◍ ɪ ᴧᴍ :- {1} **\n**└──────────────────────•**\n **✦ ᴍυsɪᴄ ʙᴏᴛ ꜰᴏʀ ᴛᴇʟᴇɢʀᴧᴍ ɢʀᴏᴜᴘs.**\n **✦ ɴo ʟᴧɢ ɴᴏ ᴧᴅs ɴᴏ ᴘʀᴏᴍᴏ.**\n **✦ 24x7 ʀυɴ ʙᴇsᴛ sᴏᴜɴᴅ ǫυᴧʟɪᴛʏ.**\n **✦ ᴇɴᴊᴏʏ ʟᴧɢ ꜰʀᴇᴇ ᴍᴜsɪᴄ ᴡɪᴛʜ ᴧᴧʀᴜᴍɪ.**\n **✦ ᴛᴧᴘ ᴛᴏ ʜᴇʟᴘ ᴧɴᴅ ᴄʜᴇᴄᴋ ᴍʏ ᴄᴏᴍᴍᴧɴᴅs**\n\n**┌────────────────────────•**\n**┆◍ ᴘᴏᴡᴇʀᴇᴅ ʙʏ  :-  [˹ᴧᴧʀᴜᴍɪ ꭙ ʙᴏᴛѕ˼ 💞](https://t.me/AarumiBots) **\n**└────────────────────────•**"
 start_3 : "❖ ʜᴇʏ {0},\nᴛʜɪs ɪs {1}\n\nᴛʜᴧɴᴋs ꜰᴏʀ ᴧᴅᴅɪɴɢ ᴍᴇ ɪɴ {2}, {3} ᴄᴧη ησᴡ ᴩʟᴧʏ sσηɢs ɪη ᴛʜɪs ᴄʜᴧᴛ."
 start_4 : "侖 <b>sυᴘᴇʀɢʀᴏυᴘ ɴᴇᴇᴅᴇᴅ</b> 侖\n\nᴘʟᴇᴧsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏυʀ <b>ɢʀᴏυᴘ</b> ᴛσ <b>sυᴘᴇʀɢʀᴏυᴘ</b> ᴧɴᴅ ᴛʜᴇɴ ᴧᴅᴅ ᴍᴇ ᴧɢᴧɪɴ.\n\n<b>ʜᴏᴡ ᴛσ ᴍᴧᴋᴇ sυᴘᴇʀɢʀᴏυᴘ ?</b>\n- ᴍᴧᴋᴇ ʏᴏυʀ ɢʀᴏυᴘ's ᴄʜᴧᴛ ʜɪsᴛᴏʀʏ <b>ᴠɪsɪʙʟᴇ</b> ᴏɴᴄᴇ."
 start_5 : "❖ <b>↝ ʙʟᴧᴄᴋʟɪsᴛᴇᴅ ᴄʜᴧᴛ ↜</b>\n\nᴛʜɪs ᴄʜᴧᴛ ɪs ʙʟᴧᴄᴋʟɪsᴛᴇᴅ ᴏɴ {0} ᴅᴧᴛᴧʙᴧsє.\nʀᴇǫυᴇsᴛ ᴧ <a href={1}>sυᴅᴏ υsᴇʀ</a> ᴛσ υɴʙʟᴧᴄᴋʟɪsᴛ ʏᴏυʀ ᴄʜᴧᴛ ᴏʀ ᴠɪsɪᴛ <a href={2}>sυᴘᴘᴏʀᴛ ᴄʜᴧᴛ.</a>"
@@ -165,10 +165,10 @@ str_3 : "❖ ғᴧɪʟєᴅ ᴛσ sᴛʀєᴧϻ ʏσυᴛυʙє ʟɪᴠє sᴛʀ
 ping_1 : "**❖ {0} ɪs ᴘɪηɢɪηɢ...**"
 ping_2 : "❖ {1}\n\n🏓 ᴘɪηɢ..ᴩσηɢ : {0}ϻs..\n\n➻ sʏsᴛᴇᴍ sᴛᴧᴛs :\n\n⌾ υᴩᴛɪᴍᴇ : {2}\n⌾ ʀᴧᴍ : {3}\n⌾ ᴄᴩυ : {4}\n⌾ ᴅɪsᴋ : {5}\n⌾ ᴩʏ-ᴛɢᴄᴧʟʟs : {6}ᴍs\n\n⌾ ʙʏ » ˹ᴧᴧʀᴜᴍɪ ꭙ ʙᴏᴛѕ˼ 💞 "
 
-queue_1 : "❖ ғєᴛᴄʜɪηɢ ǫυєυє...\n\nᴘʟєᴧsє ᴡᴧɪᴛ..."
+queue_1 : "❖ ғᴇᴛᴄʜɪηɢ ǫυєυє...\n\nᴘʟєᴧsє ᴡᴧɪᴛ..."
 queue_2 : "❖ ǫυєυє єϻᴘᴛʏ."
 queue_3 : "<u>❖ ᴄʟɪᴄᴋ ʜєʀє ᴛσ ᴄʜєᴄᴋ ᴛʜє ʟɪsᴛ σғ ᴛʜє ǫυєυєᴅ ᴛʀᴧᴄᴋs :</u> <a href={0}>ʜєʀє</a>"
-queue_4 : "<b><blockquote>⏤͟͞● ᴀᴅᴅєᴅ ᴛᴏ ǫᴜєᴜє ᴀᴛ #{0}</blockquote>\n<blockquote>❍ ᴛɪᴛʟє :</b> {1}\n<b>❍ ᴅᴜʀᴧᴛɪση :</b> {2} ϻɪηᴜᴛєѕ\n<b>❍ ʙʏ :</b> {3}</blockquote>\n<blockquote><b>❍ ᴊᴏɪη  ➛  @lll_BADNAM_BABY_lll</b></blockquote>"
+queue_4 : "<b><blockquote>⏤͟͞● ᴀᴅᴅєᴅ ᴛᴏ ǫᴜєᴜє ᴀᴛ #{0}</blockquote>\n<blockquote>❍ ᴛɪᴛʟє :</b> {1}\n<b>❍ ᴅᴜʀᴧᴛɪση :</b> {2} ϻɪηᴜᴛєѕ\n<b>❍ ʙʏ :</b> {3}</blockquote>\n<blockquote><b>❍ ᴊᴏɪη  ➛  @AarumiBots</b></blockquote>"
 queue_5 : "❖ ᴛʜєʀє's σηʟʏ σηє ǫυєυєᴅ ᴛʀᴧᴄᴋ ɪη ᴘʟᴧʏʟɪsᴛ.\n\n❖ ᴧᴅᴅ ϻσʀє ᴛʀᴧᴄᴋs ᴛσ ᴄʜєᴄᴋ ʟɪsᴛ."
 queue_6 : "<b>🕚 ᴅυʀᴧᴛɪση :</b> υηᴋησᴡη ᴅυʀᴧᴛɪση sᴛʀєᴧϻ\n\n❖ ᴄʟɪᴄᴋ ση ʙυᴛᴛση ʙєʟσᴡ ᴛσ ɢєᴛ ᴡʜσʟє ǫυєυєᴅ ʟɪsᴛ."
 queue_7 : "\n❖ ᴄʟɪᴄᴋ ση ʙυᴛᴛση ʙєʟσᴡ ᴛσ ɢєᴛ ᴡʜσʟє ǫυєυєᴅ ʟɪsᴛ."
@@ -178,16 +178,16 @@ stream_1 : "<b>❖ ˹ᴧᴧʀᴜᴍɪ ꭙ ʙᴏᴛѕ˼  [ᴍᴜsɪᴄ-ʙᴏᴛ](
 stream_2 : "<b>❖ ˹ᴧᴧʀᴜᴍɪ ꭙ ʙᴏᴛѕ˼  [ᴍᴜsɪᴄ-ʙᴏᴛ](https://t.me/AarumiBots) ᴏɴ sᴛʀᴇᴧᴍɪɴɢ ⏤͟͞●</b>\n\n<b>❍ sᴛʀᴇᴧϻ ᴛʏᴘᴇ ➥</b> ʟɪᴠᴇsᴛʀᴇᴧᴍ [ υʀʟ ]\n<b>❍ ʙʏ ➥</b> {0}"
 
 
-CLOSE_BUTTON  : "⌯ ᴄʟσsє ⌯"
+CLOSE_BUTTON  : "⌯ ᴄʟσsᴇ ⌯"
 BACK_BUTTON : "⌯ ʙᴧᴄᴋ ⌯"
 NEXT_PAGE: "▷"
 BACK_PAGE: "◁"
 
-S_B_1 : "⌯ ʌᴅᴅ ϻє ⌯"
+S_B_1 : "⊚  ᴧᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ᴄʜᴧᴛ  ⊚"
 S_B_2 : "˹ sυᴘᴘᴏʀᴛ ˼"
-S_B_3 : "✙ ʌᴅᴅ ϻє ɪη ʏᴏυʀ ɢʀᴏυᴘ ✙"
-S_B_4 : "⌯ ʜᴇʟᴘ ᴧɴᴅ ᴄᴏᴍᴍᴧɴᴅ | ᴍᴏʀᴇ ɪɴꜰᴏ ⌯"
-S_B_5 : "⌯ ᴏᴡɴᴇʀ ⌯"
+S_B_3 : "⊚  ᴧᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ᴄʜᴧᴛ  ⊚"
+S_B_4 : "ʜᴇʟᴘ ᴧɴᴅ ᴄᴏᴍᴍᴧɴᴅ | ᴍᴏʀᴇ ɪɴꜰᴏ"
+S_B_5 : "ᴏᴡɴᴇʀ"
 S_B_6 : "⌯ υᴘᴅᴧᴛєs ⌯"
 S_B_7 : "⌯ ʀᴇᴘᴏ ⌯"
 S_B_8 : "˹ ʏᴏυᴛυʙє ˼"
