--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -85,7 +85,7 @@ admin_39 : "❖ ʀєϻσᴠєᴅ 1 υᴘᴠσᴛє."
 admin_40 : "❖ υᴘᴠσᴛєᴅ."
 
 start_1 : "❖ {0} /n ⌾ ɪs ᴧʟɪᴠє .\n\n<b>⌾ υᴘᴛɪᴍᴇ :</b> {1}"
-start_2 : "✦ <b>ʜєʟʟᴏ {0}  ηɪᴄє ᴛᴏ ϻєєᴛ ʏσᴜ 🥀</b>\n\n<b>⊚ ᴛʜɪꜱ ɪꜱ</b> <b>{1}</b>\n\n<b>➻ ᴧ ᴘʀєᴍɪᴜᴍ ᴅєꜱɪɢηєᴅ ϻᴜꜱɪᴄ ᴘʟᴧʏєʀ ʙσᴛ ꜰσʀ ᴛєʟєɢʀᴧϻ ɢʀσᴜᴘ & ᴄʜᴧηηєʟ.</b>\n\n<b>:⧽ ɪғ ʏσᴜ ᴡᴧηᴛ ᴧηʏ ʜєʟᴘ ᴛᴧᴘ тᴏ ʜєʟᴘ ʙᴜᴛᴛση ꜰσʀ ϻʏ ϻσᴅᴜʟєꜱ.</b>""
+start_2 : "✦ <b>ʜєʟʟᴏ {0}  ηɪᴄє ᴛᴏ ϻєєᴛ ʏσᴜ 🥀</b>\n\n<b>⊚ ᴛʜɪꜱ ɪꜱ</b> <b>{1}</b>\n\n<b>➻ ᴧ ᴘʀєᴍɪᴜᴍ ᴅєꜱɪɢηєᴅ ϻᴜꜱɪᴄ ᴘʟᴧʏєʀ ʙσᴛ ꜰσʀ ᴛєʟєɢʀᴧϻ ɢʀσᴜᴘ & ᴄʜᴧηηєʟ.</b>\n\n<b>:⧽ ɪғ ʏσᴜ ᴡᴧηᴛ ᴧηʏ ʜєʟᴘ ᴛᴧᴘ тᴏ ʜєʟᴘ ʙᴜᴛᴛση ꜰσʀ ϻʏ ϻσᴅᴜʟєꜱ.</b>"
 start_3 : "❖ ʜᴇʏ {0},\nᴛʜɪs ɪs {1}\n\nᴛʜᴧɴᴋs ꜰᴏʀ ᴧᴅᴅɪɴɢ ᴍᴇ ɪɴ {2}, {3} ᴄᴧη ησᴡ ᴩʟᴧʏ sσηɢs ɪη ᴛʜɪs ᴄʜᴧᴛ."
 start_4 : "侖 <b>sυᴘᴇʀɢʀᴏυᴘ ɴᴇᴇᴅᴇᴅ</b> 侖\n\nᴘʟᴇᴧsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏυʀ <b>ɢʀᴏυᴘ</b> ᴛσ <b>sυᴘᴇʀɢʀᴏυᴘ</b> ᴧɴᴅ ᴛʜᴇɴ ᴧᴅᴅ ᴍᴇ ᴧɢᴧɪɴ.\n\n<b>ʜᴏᴡ ᴛσ ᴍᴧᴋᴇ sυᴘᴇʀɢʀᴏυᴘ ?</b>\n- ᴍᴧᴋᴇ ʏᴏυʀ ɢʀᴏυᴘ's ᴄʜᴧᴛ ʜɪsᴛᴏʀʏ <b>ᴠɪsɪʙʟᴇ</b> ᴏɴᴄᴇ."
 start_5 : "❖ <b>↝ ʙʟᴧᴄᴋʟɪsᴛᴇᴅ ᴄʜᴧᴛ ↜</b>\n\nᴛʜɪs ᴄʜᴧᴛ ɪs ʙʟᴧᴄᴋʟɪsᴛᴇᴅ ᴏɴ {0} ᴅᴧᴛᴧʙᴧsє.\nʀᴇǫυᴇsᴛ ᴧ <a href={1}>sυᴅᴏ υsᴇʀ</a> ᴛσ υɴʙʟᴧᴄᴋʟɪsᴛ ʏᴏυʀ ᴄʜᴧᴛ ᴏʀ ᴠɪsɪᴛ <a href={2}>sυᴘᴘᴏʀᴛ ᴄʜᴧᴛ.</a>"
