--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -86,7 +86,7 @@ admin_40 : "❖ υᴘᴠσᴛєᴅ."
 
 start_1 : "❖ {0} /n ⌾ ɪs ᴧʟɪᴠє .\n\n<b>⌾ υᴘᴛɪᴍᴇ :</b> {1}"
 start_2 : "✦ <b>ʜєʟʟᴏ {0}  ηɪᴄє ᴛᴏ ϻєєᴛ ʏσᴜ 🥀</b>\n\n<b>⊚ ᴛʜɪꜱ ɪꜱ</b> <b>{1}</b>\n\n<b>➻ ᴧ ᴘʀєᴍɪᴜᴍ ᴅєꜱɪɢηєᴅ ϻᴜꜱɪᴄ ᴘʟᴧʏєʀ ʙσᴛ ꜰσʀ ᴛєʟєɢʀᴧϻ ɢʀσᴜᴘ & ᴄʜᴧηηєʟ.</b>\n\n<b>:⧽ ɪғ ʏσᴜ ᴡᴧηᴛ ᴧηʏ ʜєʟᴘ ᴛᴧᴘ тᴏ ʜєʟᴘ ʙᴜᴛᴛση ꜰσʀ ϻʏ ϻσᴅᴜʟєꜱ.</b>"
-start_3 : "❖ ʜᴇʏ {0},\nᴛʜɪs ɪs {1}\n\nᴛʜᴧɴᴋs ꜰᴏʀ ᴧᴅᴅɪɴɢ ᴍᴇ ɪɴ {2}, {3} ᴄᴧη ησᴡ ᴩʟᴧʏ sσηɢs ɪη ᴛʜɪs ᴄʜᴧᴛ."
+start_3 : "❖ ʜᴇʏ {0},\nᴛʜɪs ɪs {1}\n\nᴛʜᴧɴᴋs ꜰᴏʀ ᴧᴅᴅɪɴɢ ᴍᴇ ɪɴ {2}, {3} ᴄᴧɴ ɴᴏᴡ ᴩʟᴧʏ sᴏɴɢs ɪɴ ᴛʜɪs ᴄʜᴧᴛ."
 start_4 : "侖 <b>sυᴘᴇʀɢʀᴏυᴘ ɴᴇᴇᴅᴇᴅ</b> 侖\n\nᴘʟᴇᴧsᴇ ᴄᴏɴᴠᴇʀᴛ ʏᴏυʀ <b>ɢʀᴏυᴘ</b> ᴛσ <b>sυᴘᴇʀɢʀᴏυᴘ</b> ᴧɴᴅ ᴛʜᴇɴ ᴧᴅᴅ ᴍᴇ ᴧɢᴧɪɴ.\n\n<b>ʜᴏᴡ ᴛσ ᴍᴧᴋᴇ sυᴘᴇʀɢʀᴏυᴘ ?</b>\n- ᴍᴧᴋᴇ ʏᴏυʀ ɢʀᴏυᴘ's ᴄʜᴧᴛ ʜɪsᴛᴏʀʏ <b>ᴠɪsɪʙʟᴇ</b> ᴏɴᴄᴇ."
 start_5 : "❖ <b>↝ ʙʟᴧᴄᴋʟɪsᴛᴇᴅ ᴄʜᴧᴛ ↜</b>\n\nᴛʜɪs ᴄʜᴧᴛ ɪs ʙʟᴧᴄᴋʟɪsᴛᴇᴅ ᴏɴ {0} ᴅᴧᴛᴧʙᴧsє.\nʀᴇǫυᴇsᴛ ᴧ <a href={1}>sυᴅᴏ υsᴇʀ</a> ᴛσ υɴʙʟᴧᴄᴋʟɪsᴛ ʏᴏυʀ ᴄʜᴧᴛ ᴏʀ ᴠɪsɪᴛ <a href={2}>sυᴘᴘᴏʀᴛ ᴄʜᴧᴛ.</a>"
 start_6 : "侖 <b>ᴛʀᴧᴄᴋ ɪɴꜰσʀᴍᴧᴛɪᴏɴ</b> 侖\n\n侖 <b>ᴛɪᴛʟᴇ :</b> {0}\n\n侖 <b>ᴅυʀᴧᴛɪᴏɴ :</b> {1} ᴍɪɴυᴛᴇs\n侖 <b>ᴠɪᴇᴡs :</b> <code>{2}</code>\n侖 <b>ᴩυʙʟɪsʜᴇᴅ ση :</b> {3}\n侖 <b>ᴄʜᴧɴɴᴇʟ :</b> <a href={4}>{5}</a>\n\n<u><b>☉ sᴇᴧʀᴄʜ ᴩᴏᴡᴇʀᴇᴅ ʙʏ {6}</b></u>"
@@ -183,17 +183,17 @@ BACK_BUTTON : "⌯ ʙᴧᴄᴋ ⌯"
 NEXT_PAGE: "▷"
 BACK_PAGE: "◁"
 
-S_B_1 : "⊚  ᴧᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ᴄʜᴧᴛ  ⊚"
+S_B_1 : "⊚  ᴧᴅᴅ ᴍᴇ  ⊚"
 S_B_2 : "˹ sυᴘᴘᴏʀᴛ ˼"
 S_B_3 : "⊚  ᴧᴅᴅ ᴍᴇ ᴛᴏ ʏᴏᴜʀ ᴄʜᴧᴛ  ⊚"
 S_B_4 : "ʜᴇʟᴘ ᴧɴᴅ ᴄᴏᴍᴍᴧɴᴅ | ᴍᴏʀᴇ ɪɴꜰᴏ"
 S_B_5 : "ᴏᴡɴᴇʀ"
-S_B_6 : "⌯ υᴘᴅᴧᴛєs ⌯"
+S_B_6 : "⌯ υᴘᴅᴧᴛᴇs ⌯"
 S_B_7 : "⌯ ʀᴇᴘᴏ ⌯"
-S_B_8 : "˹ ʏᴏυᴛυʙє ˼"
-S_B_9 : "˹ sυᴘᴘσʀᴛ ˼"
-S_B_10 : "˹ ᴧʟʟ ʙᴏᴛ's ˼"
-S_B_11 : "˹ ᴘʀᴏᴍᴏᴛɪᴏη ˼"
+S_B_8 : "⌯ ʏᴏυᴛυʙᴇ ⌯"
+S_B_9 : "⌯ sυᴘᴘσʀᴛ ⌯"
+S_B_10 : "⌯ ᴧʟʟ ʙᴏᴛ's ⌯"
+S_B_11 : "⌯ ᴘʀᴏᴍᴏᴛɪᴏη ⌯"
 
 
 H_B_1 : "ᴧᴅᴍɪɴ"
@@ -214,7 +214,7 @@ H_B_15 : "sᴘᴇᴇᴅ"
 H_B_16 : "ɢᴘᴛ"
 H_B_17 : "sᴛɪᴄᴋᴇʀ"
 H_B_18 : "ᴛᴧɢᴧʟʟ"
-H_B_19 : "ɪɴғσ"
+H_B_19 : "ɪɴꜰᴏ"
 H_B_20 : "ɢʀᴏυᴘ"
 H_B_21 : "ᴇxᴛʀᴧ"
 H_B_21 : "ɪᴍᴧɢᴇ"
@@ -231,7 +231,7 @@ ST_B_2 : "ᴘʟᴧʏ ᴍᴏᴅᴇ"
 ST_B_3 : "ʟᴧɴɢυᴧɢᴇ"
 ST_B_4 : "ᴠᴏᴛɪɴɢ ᴍᴏᴅᴇ"
 ST_B_5 : "ᴏɴ"
-ST_B_6 : "ᴏғғ"
+ST_B_6 : "ᴏꜰꜰ"
 ST_B_7 : "ᴧυᴛʜ υsᴇʀs ➜"
 ST_B_8 : "ᴧᴅᴍɪɴs"
 ST_B_9 : "ᴇᴠᴇʀʏᴏɴᴇ"
@@ -248,14 +248,14 @@ SA_B_3 : "ᴏᴠᴇʀᴧʟʟ"
 QU_B_1 : "ǫυᴇᴜᴇ"
 QU_B_2 : " {0} —————————— {1}"
 
-sudo_1 : "❖ {0} ɪs ᴧʟʀєᴧᴅʏ ɪη sυᴅσ υsєʀs ʟɪsᴛ."
-sudo_2 : "❖ ᴧᴅᴅєᴅ {0} ᴛσ sυᴅσ υsєʀs ʟɪsᴛ." 
-sudo_3 : "❖ {0} ɪs ησᴛ ɪη sυᴅσ υsєʀs ʟɪsᴛ."
-sudo_4 : "❖ ʀєϻσᴠєᴅ {0} ғʀσϻ sυᴅσ υsєʀs ʟɪsᴛ."
-sudo_5 : "❖ <u><b>σᴡηєʀ :</b></u>\n"
-sudo_6 : "❖ \n<u><b>⌾ sυᴅσ υsєʀs :</b></u>\n"
-sudo_7 : "❖ ησ sυᴅσ υsєʀs ғσυηᴅ."
-sudo_8 : "ғᴧɪʟєᴅ."
+sudo_1 : "❖ {0} ɪs ᴧʟʀᴇᴧᴅʏ ɪɴ sυᴅᴏ υsᴇʀs ʟɪsᴛ."
+sudo_2 : "❖ ᴧᴅᴅᴇᴅ {0} ᴛσ sυᴅᴏ υsᴇʀs ʟɪsᴛ." 
+sudo_3 : "❖ {0} ɪs ɴᴏᴛ ɪɴ sυᴅᴏ υsᴇʀs ʟɪsᴛ."
+sudo_4 : "❖ ʀᴇᴍᴏᴠᴇᴅ {0} ꜰʀᴏᴍ sυᴅᴏ υsᴇʀs ʟɪsᴛ."
+sudo_5 : "❖ <u><b>ᴏᴡɴᴇʀ :</b></u>\n"
+sudo_6 : "❖ \n<u><b>⌾ sυᴅᴏ υsᴇʀs :</b></u>\n"
+sudo_7 : "❖ ɴᴏ sυᴅᴏ υsᴇʀs ꜰᴏᴜɴᴅ."
+sudo_8 : "ꜰᴀɪʟᴇᴅ."
 
 block_1 : "❖ {0} ɪs ᴧʟʀєᴧᴅʏ ʙʟσᴄᴋєᴅ ғʀσϻ ᴛʜє ʙσᴛ."
 block_2 : "❖ ᴧᴅᴅєᴅ {0} ᴛσ ʙʟσᴄᴋєᴅ υsєʀs ʟɪsᴛ."
@@ -324,16 +324,16 @@ gban_11 : "❖ ғєᴛᴄʜɪηɢ ɢʙᴧηηєᴅ υsєʀs ʟɪsᴛ..."
 gban_12 : "❖  <b>ɢʟᴏʙᴧʟʟʏ ʙᴧηηєᴅ υsєʀs :</b>\n\n"
 
 #Song
-SG_B_1 : "⌯ ᴄʟɪᴄᴋ ʜєʀє ⌯"
-SG_B_2 : "⌾ ᴧυᴅɪσ ⌾"
-SG_B_3 : "⌾ ᴠɪᴅєσ ⌾"
+SG_B_1 : "⌯ ᴄʟɪᴄᴋ ʜᴇʀᴇ ⌯"
+SG_B_2 : "⌾ ᴧυᴅɪᴏ ⌾"
+SG_B_3 : "⌾ ᴠɪᴅᴇᴏ ⌾"
 
 # Song
-song_1 : "❖ ʏσυ ᴄᴧη ᴅσᴡηʟσᴧᴅ ϻυsɪᴄ σʀ ᴠɪᴅєσ ꜰʀσϻ ʏσυᴛυʙє σηʟʏ ɪη ᴘʀɪᴠᴧᴛє ᴄʜᴧᴛ. ᴘʟєᴧsє sᴛᴧʀᴛ ϻє ɪη ᴘʀɪᴠᴧᴛє ᴄʜᴧᴛ."
-song_2 : "❖  υsᴧɢє:\n\n❖ /song [ϻυsɪᴄ ηᴧϻє] σʀ [ʏσυᴛυʙє ʟɪηᴋ]"
-song_3 : "❖ ʟɪᴠє ʟɪηᴋ ᴅєᴛєᴄᴛєᴅ. ɪ ᴧϻ ησᴛ ᴧʙʟє ᴛσ ᴅσᴡηʟσᴧᴅ ʟɪᴠє ʏσυᴛυʙє ᴠɪᴅєσs. "
-song_4 : "❖ ᴛɪᴛʟє:- {0}\n\n❖ sєʟєᴄᴛ ᴛʜє ᴛʏᴘє ɪη ᴡʜɪᴄʜ ʏσυ ᴡᴧηᴛ ᴛσ ᴅσᴡηʟσᴧᴅ."
-song_5 : "❖ ησᴛ ᴧ ᴠᴧʟɪᴅ ʏσυᴛυʙє ʟɪηᴋ."
+song_1 : "❖ ʏᴏυ ᴄᴧɴ ᴅᴏᴡɴʟᴏᴧᴅ ᴍυsɪᴄ ᴏʀ ᴠɪᴅᴇᴏ ꜰʀᴏᴍ ʏᴏυᴛυʙᴇ ᴏɴʟʏ ɪɴ ᴘʀɪᴠᴧᴛᴇ ᴄʜᴧᴛ. ᴘʟᴇᴧsᴇ sᴛᴧʀᴛ ᴍᴇ ɪɴ ᴘʀɪᴠᴧᴛᴇ ᴄʜᴧᴛ."
+song_2 : "❖  υsᴧɢᴇ:\n\n❖ /song [ᴍᴜsɪᴄ ɴᴧᴍᴇ] ᴏʀ [ʏᴏυᴛυʙᴇ ʟɪɴᴋ]"
+song_3 : "❖ ʟɪᴠᴇ ʟɪɴᴋ ᴅᴇᴛᴇᴄᴛᴇᴅ. ɪ ᴧᴍ ɴᴏᴛ ᴧʙʟᴇ ᴛᴏ ᴅᴏᴡɴʟᴏᴧᴅ ʟɪᴠᴇ ʏᴏυᴛυʙᴇ ᴠɪᴅᴇᴏs. "
+song_4 : "❖ ᴛɪᴛʟᴇ:- {0}\n\n❖ sᴇʟᴇᴄᴛ ᴛʜᴇ ᴛʏᴘᴇ ɪɴ ᴡʜɪᴄʜ ʏᴏυ ᴡᴧɴᴛ ᴛᴏ ᴅᴏᴡɴʟᴏᴧᴅ."
+song_5 : "❖ ɴᴏᴛ ᴧ ᴠᴧʟɪᴅ ʏσυᴛυʙᴇ ʟɪɴᴋ."
 song_6 : "❖ ɢєᴛᴛɪηɢ ꜰσʀϻᴧᴛs...\n\n❖ ᴘʟєᴧsє ᴡᴧɪᴛ..."
 song_7 : "❖ ꜰᴧɪʟєᴅ ᴛσ ɢєᴛ ᴧᴠᴧɪʟᴧʙʟє ꜰσʀϻᴧᴛs ꜰσʀ ᴛʜє ᴠɪᴅєσ. ᴘʟєᴧsє ᴛʀʏ ᴧηʏ σᴛʜєʀ ᴛʀᴧᴄᴋ."
 song_8 : "❖ ᴅσᴡηʟσᴧᴅ sᴛᴧʀᴛєᴅ\n\n❖ ᴘʟєᴧsє ʜσʟᴅ ση ғσʀ ғєᴡ sєᴄσηᴅs..."
