--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -1,23 +1,23 @@
 name : 🇺🇸 English
 
 
-general_1 : "❖ ʀєᴘʟʏ ᴛσ ᴧ υsєʀ's ϻєssᴧɢє σʀ ɢɪᴠє υsєʀηᴧϻє/υsєʀ ɪᴅ."
-general_2 : "❖ sσϻєᴛʜɪηɢ ᴡєηᴛ ᴡʀσηɢ ᴡʜɪʟє ᴘʀσᴄєssɪηɢ ʏσυʀ ǫυєʀʏ.\n\nєxᴄєᴘᴛɪση : <code>{0}</code>"
-general_3 : "❖ ʏσυ'ʀє ᴧη ᴧησηʏϻσυs ᴧᴅϻɪη ɪη ᴛʜɪs ᴄʜᴧᴛ, ʀєᴠєʀᴛ ʙᴧᴄᴋ ᴛσ υsєʀ ᴧᴄᴄσυηᴛ ғσʀ υsɪηɢ ϻє."
-general_4 : "❖ ʏσυ ᴅση'ᴛ ʜᴧᴠє ᴘєʀϻɪssɪσηs ᴛσ ϻᴧηᴧɢє ᴠɪᴅєσ ᴄʜᴧᴛs.\n\nʀєʟσᴧᴅ ᴧᴅϻɪη ᴄᴧᴄʜє ᴠɪᴧ /reload"
-general_5 : "❖ ʙσᴛ ɪsη'ᴛ sᴛʀєᴧϻɪηɢ ση ᴠɪᴅєσᴄʜᴧᴛ."
+general_1 : "❖ ʀᴇᴘʟʏ ᴛᴏ ᴧ υsᴇʀ's ᴍᴇssᴧɢᴇ ᴏʀ ɢɪᴠᴇ υsᴇʀɴᴧᴍᴇ/υsᴇʀ ɪᴅ."
+general_2 : "❖ sσϻєᴛʜɪηɢ ᴡᴇηᴛ ᴡʀᴏɴɢ ᴡʜɪʟᴇ ᴘʀᴏᴄᴇssɪɴɢ ʏᴏυʀ ǫυᴇʀʏ.\n\nᴇxᴄᴇᴘᴛɪᴏɴ : <code>{0}</code>"
+general_3 : "❖ ʏσυ'ʀᴇ ᴧɴ ᴧɴᴏɴʏᴍᴏᴜs ᴧᴅᴍɪɴ ɪɴ ᴛʜɪs ᴄʜᴧᴛ, ʀєᴠᴇʀᴛ ʙᴧᴄᴋ ᴛᴏ υsᴇʀ ᴧᴄᴄᴏᴜɴᴛ ꜰᴏʀ υsɪɴɢ ᴍᴇ."
+general_4 : "❖ ʏᴏυ ᴅᴏɴ'ᴛ ʜᴧᴠє ᴘєʀϻɪssɪᴏɴs ᴛᴏ ᴍᴧɴᴧɢᴇ ᴠɪᴅᴇᴏ ᴄʜᴧᴛs.\n\nʀᴇʟᴏᴧᴅ ᴧᴅᴍɪɴ ᴄᴧᴄʜᴇ ᴠɪᴧ /reload"
+general_5 : "❖ ʙσᴛ ɪsɴ'ᴛ sᴛʀᴇᴧᴍɪɴɢ ᴏɴ ᴠɪᴅᴇᴏᴄʜᴧᴛ."
 
-tg_1 : "❖ <u><b>{0} ᴅσᴡηʟσᴧᴅєʀ</b></u>\n\n<b>ғɪʟє sɪᴢє :</b> {1}\n<b>ᴄσϻᴘʟєᴛєᴅ :</b> {2}\n<b>ᴘєʀᴄєηᴛᴧɢє :</b> {3}%\n\n<b>sᴘєєᴅ :</b> {4}/s\n<b>єᴛᴧ :</b> {5}"
-tg_2 : "❖ sυᴄᴄєssғυʟʟʏ ᴅσᴡηʟσᴧᴅєᴅ, ᴘʀσᴄєssɪηɢ ғɪʟє...\n\n<b>ᴛɪϻє єʟᴧᴘsєᴅ :</b> {0}"
-tg_3 : "❖ ғᴧɪʟєᴅ ᴛσ ᴅσᴡηʟσᴧᴅ ϻєᴅɪᴧ ғʀσϻ ᴛєʟєɢʀᴧϻ, ᴘʟєᴧsє ᴛʀʏ ᴧɢᴧɪη..."
-tg_4 : "❖ ᴅσᴡηʟσᴧᴅ ᴧʟʀєᴧᴅʏ ᴄσϻᴘʟєᴛєᴅ."
-tg_5 : "❖ ᴅσᴡηʟσᴧᴅ ᴧʟʀєᴧᴅʏ ᴄσϻᴘʟєᴛєᴅ σʀ ᴄᴧηᴄєʟʟєᴅ."
-tg_6 : "❖ ᴅσᴡηʟσᴧᴅ ᴄᴧηᴄєʟʟєᴅ."
-tg_7 : "❖ ᴅσᴡηʟσᴧᴅ ᴄᴧηᴄєʟʟєᴅ ʙʏ : {0}"
-tg_8 : "❖ ғᴧɪʟєᴅ ᴛσ sᴛσᴘ ᴛʜє ᴅσᴡηʟσᴧᴅ."
-tg_9 : "❖ ғᴧɪʟєᴅ ᴛσ ɢєᴛ ᴛʜє σηɢσɪηɢ ᴅσᴡηʟσᴧᴅ ᴛᴧsᴋ..."
+tg_1 : "❖ <u><b>{0} ᴅᴏᴡɴʟᴏᴧᴅᴇʀ</b></u>\n\n<b>ꜰɪʟᴇ sɪᴢᴇ :</b> {1}\n<b>ᴄᴏᴍᴘʟᴇᴛᴇᴅ :</b> {2}\n<b>ᴘᴇʀᴄᴇɴᴛᴧɢᴇ :</b> {3}%\n\n<b>sᴘᴇᴇᴅ :</b> {4}/s\n<b>ᴇᴛᴧ :</b> {5}"
+tg_2 : "❖ sυᴄᴄᴇssꜰυʟʟʏ ᴅᴏᴡɴʟᴏᴧᴅᴇᴅ, ᴘʀᴏᴄᴇssɪɴɢ ꜰɪʟᴇ...\n\n<b>ᴛɪᴍᴇ ᴇʟᴧᴘsᴇᴅ :</b> {0}"
+tg_3 : "❖ ꜰᴧɪʟᴇᴅ ᴛᴏ ᴅᴏᴡɴʟᴏᴧᴅ ᴍᴇᴅɪᴧ ꜰʀᴏᴍ ᴛᴇʟᴇɢʀᴧᴍ, ᴘʟᴇᴧsᴇ ᴛʀʏ ᴧɢᴧɪɴ..."
+tg_4 : "❖ ᴅᴏᴡɴʟᴏᴧᴅ ᴧʟʀᴇᴧᴅʏ ᴄᴏᴍᴘʟᴇᴛᴇᴅ."
+tg_5 : "❖ ᴅᴏᴡɴʟᴏᴧᴅ ᴧʟʀᴇᴧᴅʏ ᴄᴏᴍᴘʟᴇᴛᴇᴅ ᴏʀ ᴄᴧɴᴄᴇʟʟᴇᴅ."
+tg_6 : "❖ ᴅᴏᴡɴʟᴏᴧᴅ ᴄᴧɴᴄᴇʟʟᴇᴅ."
+tg_7 : "❖ ᴅᴏᴡɴʟᴏᴧᴅ ᴄᴧɴᴄᴇʟʟᴇᴅ ʙʏ : {0}"
+tg_8 : "❖ ꜰᴧɪʟᴇᴅ ᴛᴏ sᴛᴏᴘ ᴛʜᴇ ᴅᴏᴡɴʟᴏᴧᴅ."
+tg_9 : "❖ ꜰᴧɪʟᴇᴅ ᴛσ ɢᴇᴛ ᴛʜᴇ ᴏɴɢᴏɪɴɢ ᴅᴏᴡɴʟᴏᴧᴅ ᴛᴧsᴋ..."
 
-call_1 : "❖ ʙσᴛ ʀєǫυɪʀєs <b>ɪηᴠɪᴛє υsєʀs ᴠɪᴧ ʟɪηᴋ</b> ᴘєʀϻɪssɪση ᴛσ ɪηᴠɪᴛє ᴧssɪsᴛᴧηᴛ ᴛσ ʏσυʀ ᴄʜᴧᴛ."
+call_1 : "❖ ʙᴏᴛ ʀᴇǫυɪʀᴇs <b>ɪɴᴠɪᴛє υsєʀs ᴠɪᴧ ʟɪηᴋ</b> ᴘєʀϻɪssɪση ᴛσ ɪηᴠɪᴛє ᴧssɪsᴛᴧηᴛ ᴛσ ʏσυʀ ᴄʜᴧᴛ."
 call_2 : "❖ <u>{0} ᴧssɪsᴛᴧηᴛ ɪs ʙᴧηηєᴅ ɪη ʏσυʀ ɢʀσυᴘ/ᴄʜᴧηηєʟ.</u>\n\n<b>ɪᴅ :</b> <code>{1}</code>\n<b>ηᴧϻє :</b> {2}\n<b>υsєʀηᴧϻє :</b> @{3}\n\nᴘʟєᴧsє υηʙᴧη ᴛʜє ᴧssɪsᴛᴧηᴛ ᴧηᴅ ᴛʀʏ ᴧɢᴧɪη."
 call_3 : "❖ ғᴧɪʟєᴅ ᴛσ ɪηᴠɪᴛє {0} ᴧssɪsᴛᴧηᴛ ᴛσ ʏσυʀ ᴄʜᴧᴛ.\n\nʀєᴧsση : <code>{1}</code>"
 call_4 : "❖ ᴘʟєᴧsє ᴡᴧɪᴛ...\n\nɪηᴠɪᴛɪηɢ {0} ᴧssɪsᴛᴧηᴛ ᴛσ ʏσυʀ ᴄʜᴧᴛ..."
